# Intern-Atlas

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: API_USAGE.md  LLM_TOOL_INTEGRATION.md  LOCAL_GRAPH_BUILDER.md
examples/: evidence_papers.json  papers.txt
src/intern_atlas/: __init__.py  builder.py  cli.py  db.py  evidence.py  io.py  llm.py  models.py  remote.py  server.py  ui.py  util.py
tests/: test_api_v1.py  test_build_no_llm.py
