[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intern-atlas"
version = "0.1.0"
description = "Build local methodology-evolution graphs from papers and query Intern Atlas APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OpenRaiser" }]
keywords = ["research", "papers", "knowledge-graph", "methodology", "llm"]
dependencies = [
  "httpx>=0.27,<1",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "PyMuPDF>=1.24,<1.25",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
intern-atlas = "intern_atlas.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

